--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  PaQoo
 # Build settings
 markdown: kramdown
 remote_theme: pmarsceill/just-the-docs
-theme: "just-the-docs"
+#theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
