--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ github_username:  PaQoo
 
 # Build settings
 markdown: kramdown
-#remote_theme: pmarsceill/just-the-docs
-theme: "just-the-docs"
+remote_theme: pmarsceill/just-the-docs
+#theme: "just-the-docs"
 plugins:
   - jekyll-feed
 
